# QTextLite

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: AppSettings.cpp  AppSettings.h  Document.cpp  Document.h  FileManager.cpp  FileManager.h
src/ui/: EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h
src/ui/dialogs/: FindDialog.cpp  FindDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/widgets/: LineNumberArea.cpp  LineNumberArea.h
src/utils/: Singleton.h
